<resources>
    <string name="app_name">HealingLand</string>
    <string name="login">Login</string>
    <string name="fill_your_email">Fill your Email and Password to Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="or_sign_in_with">OR Sign in With</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="i_don_t_have_an_account">I don\'t have an account </string>
    <string name="register">Register</string>
    <string name="login_image">Login Image</string>
    <string name="healing_land">Healing Land</string>
    <string name="love_our_environment_always">Love our Environment Always</string>
    <string name="made">Made in Sri Lanka 🇱🇰</string>
    <string name="first_activity">firstActivity</string>
    <string name="next">Next</string>
    <string name="you_have_to_create_an_account_in_our_app">First, You Have to Create an Account in Our App</string>
    <string name="first">First,</string>
    <string name="start_planting">Start Planting</string>
    <string name="we_help_you_grow_and_care_your_plant_ease">We help you grow and care your plant ease</string>
    <string name="event_name">Event Name</string>
    <string name="add_up_your_event_to_the_feed">Add Up Your Event To The Feed</string>
    <string name="event_Name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="coordinator_name">Coordinator Name</string>
    <string name="coordinator_number">Coordinator Number</string>
    <string name="upload_a_photo_for_promote_your_event">Upload a photo for promote your event</string>
    <string name="dates">Date</string>
    <string name="time">Time</string>
    <string name="get_your_tips">Get Your Tips</string>
    <string name="add_garden_tips">Add Garden Tips</string>
    <string name="fertilizing_tip">Fertilizing Tip</string>
    <string name="planting_tip">Planting Tip</string>
    <string name="water">Water</string>
    <string name="plant_type">Plant Type</string>
    <string name="botanical_name">Botanical Name</string>
    <string name="plant_name">Plant Name</string>
    <string name="upload_a_photo">Upload a Photo</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="tips">Tips</string>
    <string name="shop">Shop</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="care_protect_prevent">Care Protect Prevent</string>
    <string name="buy_and_heal_your_lovely_land">Buy And Heal Your Lovely Land</string>
    <string name="market">Market</string>
    <string name="events">Events</string>
    <string name="diseases">Diseases</string>
    <string name="edit_garden_tips">Edit Garden Tips</string>
    <string name="update">Update</string>
    <string name="red_rose">Red Rose</string>
    <string name="add_plant_diseases">Add Plant Diseases</string>
    <string name="disease_name">Disease Name</string>
    <string name="disease_description">Disease Description</string>
    <string name="how_to_prevent_disease">How To Prevent Disease</string>
    <string name="add_plant_disease_details">Add Plant Disease Details</string>
    <string name="update_plant_disease_details">Update Plant Disease Details</string>
    <string name="edit_your_event">Edit Your Event</string>
    <string name="visit_page">Visit Page</string>
    <string name="plant_distribution">Plant Distribution</string>
    <string name="descriptionevent">descriptionEvent</string>
    <string name="venuee">Venue :</string>
    <string name="times">Time :</string>
    <string name="dat">Date :</string>
    <string name="add_plant_details">Add Plant Details</string>
    <string name="plant_price">Plant Price</string>
    <string name="plant_description">Plant Description</string>
    <string name="quantity">Quantity</string>
    <string name="upload_a_photo_of_your_plant">Upload a photo of your plant</string>
    <string name="edit_plant_details">Edit Plant Details</string>
    <string name="plant_update">Update</string>
    <string name="select_your_plant_type">Select Your Plant Type</string>
    <string name="tree_plants">Tree Plants</string>
    <string name="vegetable_plants">Vegetable Plants</string>
    <string name="fruit_plants">Fruit Plants</string>
    <string name="herbal_plants">Herbal Plants</string>
    <string name="add_your_payment_details">Add Your Payment Details</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="save_card_details">Save Card Details</string>
    <string name="email">Email</string>
    <string name="fill_your_details_to_register">Fill your details to Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="plantation_events">Plantation Events</string>
    <string name="add_events">Add Events</string>
    <string name="timess">Time</string>
    <string name="updatebtn">Update</string>
    <string name="plantation_program">Plantation Program</string>
    <string name="plant_distributions">Plant Distribution</string>
    <string name="seeds_distribution">Seeds Distribution</string>
    <string name="ftfa_is_a_npo_that_addresses_food_security_environmental_sustainability_and_greening_plant_a_tree_with_food_trees_for_sri_lanka_find_out_about_our_tree_planting_initiatives_carbon_compliance_school_gardening_donate_a_tree_plant_a_tree_come_and_give_us_your_support"><![CDATA[FTFA Is A NPO That Addresses Food Security, Environmental Sustainability and Greening. Plant a Tree with Food & Trees For Sri Lanka. Find Out About Our Tree Planting Initiatives! Carbon Compliance. School Gardening. Donate a Tree. Plant a tree. Come and give us your support]]></string>
    <string name="plant_adertising">Plant Adertising</string>
    <string name="seed_distribution">Seed Distribution</string>
    <string name="cure_and_prevent_plant_diseases">Cure and Prevent Plant Diseases</string>
    <string name="plant_diseases_home">Plant Diseases Home</string>
    <string name="plant_diseases">Plant Diseases</string>
    <string name="bacterial_spot">Bacterial Spot</string>
    <string name="anthracnose">Anthracnose</string>
    <string name="apple_scab">Apple Scab</string>
    <string name="bacterial_spot_description">Bacterial spot can be a devastating disease when the weather is warm and humid. The disease can affect all above-ground p arts of tomato and pepper plants: stems, petioles, leaves, and fruits.</string>
    <string name="bacterial_spot_prevent">Use clean propagation material and disease-free seed. In field-grown tomato and pepper rotate fields to prevent infection from volunteer plants and crop debris.</string>
    <string name="care">Care</string>
    <string name="esay">Esay</string>
    <string name="every_4_7_days">Every 4 - 7 Days</string>
    <string name="sun">Sun</string>
    <string name="part">Part</string>
    <string name="rose">Rose</string>
    <string name="hardy_gerbra">Hardy Gerbera</string>
    <string name="petunia_pink">Petunia Pink</string>
    <string name="add_new_disease">Add New Disease</string>
    <string name="disease_cause">Disease Cause</string>
    <string name="delete">Delete</string>
    <string name="bacterial_spot_can_be_a_devastating_disease_when_the_weather_is_warm_and_humid_the_disease_can_affect_all_above_ground_parts_of_tomato_and">Bacterial spot can be a devastating disease when the weather is warm and humid. The disease can affect all above-ground parts of tomato and</string>
    <string name="use_clean_propagation_material_and_disease_free_seed_in_field_grown_tomato_and_pepper_rotate">Use clean propagation material and disease-free seed. In field-grown tomato and pepper rotate</string>
    <string name="four_species_of_xanthomonas">four species of Xanthomonas</string>
    <string name="plant_code">Plant Code</string>
    <string name="care_and_treatment_tips">Care and Treatment Tips</string>
    <string name="plant_your_roses_in_a_sunny_location_with_good_drainage_fertilize_them_regularly_for_impressive_flowers_water_them_evenly_to_keep_the_soil_moist_prune_established_rose_bushes_in_early_spring_hit_these_six_simple">Plant your roses in a sunny location with good drainage. Fertilize them regularly for impressive flowers.Water them evenly to keep the soil moist. Prune established rose bushes in early spring. Hit these six simple.</string>
    <string name="start_feeding_older_plants_in_spring_when_new_growth_is_about_6_inches_long_most_will_benefit_from_a_second_feeding_of_liquid_fertilizer_after_the_first_bloom_and_repeat_blooming_roses_do_best_with_regular_feeding_every_2_3_weeks_until_late_summer">Start feeding older plants in spring when new growth is about 6 inches long. Most will benefit from a second feeding of liquid fertilizer after the first bloom, and repeat-blooming roses do best with regular feeding every 2-3 weeks until late summer.</string>
    <string name="gerbera_should_be_fed_with_a_fertilizer_based_on_nitrate_and_not_ammonium_while_ammonium_based_fertilizer_promotes_large_leaves_and_more_shading">Gerbera should be fed with a fertilizer based on nitrate and not ammonium. While ammonium-based fertilizer promotes large leaves and more shading.</string>
    <string name="space_them_12_to_18_inches_apart_with_the_crown_of_the_plant_at_or_slightly_above_the_soil_level_the_crown_is_the_point_where_the_stem_and_roots_meet_the_soil">Space them 12 to 18 inches apart with the crown of the plant at or slightly above the soil level. The crown is the point where the stem and roots meet the soil.</string>
    <string name="keep_the_soil_moist_by_watering_regularly_during_prolonged_dry_periods_in_summer_plants_in_containers_will_need_regular_possibly_daily_watering_the_aim_being_to_keep_the_compost_evenly_moist_but_don_t_overwater_as_too_much_water_will_cause_the_plants">Keep the soil moist by watering regularly during prolonged dry periods in summer. Plants in containers will need regular, possibly daily watering– the aim being to keep the compost evenly moist. But don\'t overwater, as too much water will cause the plants.</string>
    <string name="flower_plant">Flower Plant</string>
    <string name="rosoideae">Rosoideae</string>
    <string name="https_www_google_com_imgres_imgurl_https_3a_2f_2fimages_unsplash_com_2fphoto_1619532839116_af15d051cd3e_3fixlib_3drb_4_0_3_26ixid_3dmnwxmja3fdb8mhxzzwfyy2h8mtv8fhjlzcuymhjvc2v8zw58mhx8mhx8_26w_3d1000_26q_3d8refurl_https_3a_2f_2funsplash_com_2fs_2fphotos_2fred_robnid_s5aom6llljed2_12ahukewil_y7ctan7ahxz_zgghtkla8wqmygaeguiard0aq_0aq">https://www.google.com/imgres?imgurl=https%3A%2F%2Fimages.unsplash.com%2Fphoto-1619532839116-af15d051cd3e%3Fixlib%3Drb-4.0.3%26ixid%3DMnwxMjA3fDB8MHxzZWFyY2h8MTV8fHJlZCUyMHJvc2V8ZW58MHx8MHx8%26w%3D1000%26q%3D8refurl=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fred-robnid=s5aoM6lLLjed2=12ahUKEwiL_Y7Ctan7AhXz_zgGHTklA8wQMygAegUIARD0AQ..0AQ</string>
</resources>