<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGardenTips">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="141dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_decoration" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <TextView
            android:id="@+id/editGardenTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_family"
            android:text="@string/edit_garden_tips"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:padding="4dp"
            android:textColorHint="@color/placeholder"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:boxStrokeColor="@color/placeholder"
            app:hintTextColor="@color/placeholder"
            app:startIconTint="@color/placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/plant_name"
                android:text="@string/red_rose"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:padding="4dp"
            android:textColorHint="@color/placeholder"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:boxStrokeColor="@color/placeholder"
            app:hintTextColor="@color/placeholder"
            app:startIconTint="@color/placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/botanical_name"
                android:text="@string/rosoideae"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:padding="4dp"
            android:textColorHint="@color/placeholder"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:boxStrokeColor="@color/placeholder"
            app:hintTextColor="@color/placeholder"
            app:startIconTint="@color/placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/plant_type"
                android:text="@string/flower_plant"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:padding="4dp"
            android:textColorHint="@color/placeholder"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/placeholder"
            app:hintTextColor="@color/placeholder"
            app:startIconTint="@color/placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wtr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/water"
                android:text="@string/every_4_7_days"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:padding="4dp"
            android:textColorHint="@color/placeholder"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/placeholder"
            app:hintTextColor="@color/placeholder"
            app:startIconTint="@color/placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plTip"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/planting_tip"
                android:text="@string/plant_your_roses_in_a_sunny_location_with_good_drainage_fertilize_them_regularly_for_impressive_flowers_water_them_evenly_to_keep_the_soil_moist_prune_established_rose_bushes_in_early_spring_hit_these_six_simple"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:padding="4dp"
            android:textColorHint="@color/placeholder"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/placeholder"
            app:hintTextColor="@color/placeholder"
            app:startIconTint="@color/placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fert"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/fertilizing_tip"
                android:text="@string/start_feeding_older_plants_in_spring_when_new_growth_is_about_6_inches_long_most_will_benefit_from_a_second_feeding_of_liquid_fertilizer_after_the_first_bloom_and_repeat_blooming_roses_do_best_with_regular_feeding_every_2_3_weeks_until_late_summer"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:padding="4dp"
            android:textColorHint="@color/placeholder"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:boxStrokeColor="@color/placeholder"
            app:hintTextColor="@color/placeholder"
            app:startIconTint="@color/placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_family"
                android:hint="@string/upload_a_photo"
                android:text="@string/https_www_google_com_imgres_imgurl_https_3a_2f_2fimages_unsplash_com_2fphoto_1619532839116_af15d051cd3e_3fixlib_3drb_4_0_3_26ixid_3dmnwxmja3fdb8mhxzzwfyy2h8mtv8fhjlzcuymhjvc2v8zw58mhx8mhx8_26w_3d1000_26q_3d8refurl_https_3a_2f_2funsplash_com_2fs_2fphotos_2fred_robnid_s5aom6llljed2_12ahukewil_y7ctan7ahxz_zgghtkla8wqmygaeguiard0aq_0aq"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/editTip"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/round_button"
                android:fontFamily="@font/poppins_family"
                android:text="@string/update"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>